# tauri-plugin-graphql

./: Cargo.toml  package.json  pnpm-lock.yaml
examples/preact-app/: package.json
examples/preact-app/src-tauri/: Cargo.toml
