[package]
name = "tauri-plugin-graphql"
version = "2.1.0"
authors = ["Jonas Kruckenberg"]
description = "A plugin for Tauri that enables type-safe IPC through GraphQL."
edition = "2021"
rust-version = "1.82"
exclude = ["/webview-dist", "/webview-src", "node_modules"]
license = "MIT"
repository = "https://github.com/JonasKruckenberg/tauri-plugin-graphql"
categories = ["gui", "web-programming"]
keywords = ["tauri-plugin", "graphql"]

[package.metadata.docs.rs]
features = ["graphiql"]

[dependencies]
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.81"
tauri = "2.5.0"
async-graphql = "7.0.16"
warp = { version = "^0.3.2", optional = true }
async-graphql-warp = { version = "7.0.16", optional = true }
http = { version = "1.3.1", optional = true }

[features]
graphiql = ["dep:http", "dep:warp", "dep:async-graphql-warp"]
log = ["async-graphql/log"]
tracing = ["async-graphql/tracing"]
opentelemetry = ["async-graphql/opentelemetry"]
bson = ["async-graphql/bson"]
chrono = ["async-graphql/chrono"]
chrono-tz = ["async-graphql/chrono-tz"]
url = ["async-graphql/url"]
uuid = ["async-graphql/uuid"]
string_number = ["async-graphql/string_number"]
dataloader = ["async-graphql/dataloader"]
secrecy = ["async-graphql/secrecy"]
decimal = ["async-graphql/decimal"]
bigdecimal = ["async-graphql/bigdecimal"]
cbor = ["async-graphql/cbor"]
smol_str = ["async-graphql/smol_str"]
hashbrown = ["async-graphql/hashbrown"]
time = ["async-graphql/time"]
tokio-sync = ["async-graphql/tokio-sync"]
fast_chemail = ["async-graphql/fast_chemail"]

[dev-dependencies]
rand = "0.9.0"

[workspace]
members = ["examples/*/src-tauri"]
